--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "18.6.4",
-    "three": "0.146.0",
+    "three": "^0.157.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
